Fix img text to nowrap

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ body {
   font-family: sans-serif;
   font-size: 28px;
   font-weight: 500;
+  white-space: nowrap;
 }
 
 img {
